# enigma

./: CMakeLists.txt  README.md  main.cpp
src/: macine.cpp  macine.h
src/helpers/: validation.cpp  validation.h
src/plugboard/: configuration.cpp  configuration.h  plugboard.cpp  plugboard.h
src/reflector/: reflector.cpp  reflector.h
src/rotors/: configuration.cpp  configuration.h  rotor.cpp  rotor.h
